# team-assistant-v1

./: CLAUDE.md  PIPELINE_STATUS_REVIEW.md  README.md  deployment_metadata.json  output.txt  pyproject.toml  test_collect_only.txt
.cursor/rules/: constant-rules.mdc
agents/: __init__.py
agents/context_manager/: Context-Manager-Implementation.md  __init__.py  context_manager_agent.py  context_manager_agent_prompt_v1.md  test_context_manager.py  vector_store.py
agents/greeter/: __init__.py  greeter_agent.py
agents/search/: __init__.py  search_agent.py
app/: agent.py  agent_engine_app.py
app/config/: configuration.py  data_sources_config.yaml  refined_secret_example.py
app/utils/: sp_typing.py  tracing.py
config/: configuration.py  data_sources_config.yaml
data_ingestion/connectors/: base_connector.py  drive_connector.py  github_connector.py  web_connector.py
data_ingestion/ingestors/: __init__.py  database_ingestor.py  knowledge_graph_ingestor.py  vector_store_ingestor.py
data_ingestion/managers/: __init__.py  database_manager.py  knowledge_graph_manager.py  vector_store_manager.py
data_ingestion/models/: models.py
data_ingestion/pipeline/: __init__.py  pipeline_cli.py  pipeline_manager.py
data_ingestion/processors/: text_processor.py
data_ingestion/retrievers/: __init__.py  database_retriever.py  knowledge_graph_retriever.py  vector_store_retriever.py
deployment/cd/: deploy-to-prod.yaml  staging.yaml
deployment/ci/: pr_checks.yaml
deployment/terraform/: variables.tf
docs/: PIPELINE_EXECUTION.md  TESTING_STRATEGY.md
docs/frontend/: cursor_ui_prompt_v0.md  firebase_studio_prompt.md  firebase_studio_prompt_v1.md  firebase_studio_prompt_v2.md  multiagent_frontend_guide.md  react_mastery_plan_v0.md  react_mastery_plan_v1.md  web_phase_results.json
docs/integrations/: adk_crewai_synergy_report.md
docs/references/: ai-workflow-automation-tooling.md
docs/work-logs/: COORDINATOR_AGENT_PATTERN.md  COORDINATOR_PATTERN_AND_TESTING_END_OF_DAY_REVIEW_06082925.md  DATA_ARCH_TEST_STRATEGY.md  DATA_RETRIEVAL_IMPL_STARTING_06082925.md  README_DATA_PROCESSING.md  TESTING_ANALYSIS_AND_PLAN.md  comprehensive-e2e-testing.md  cursor_plan_for_accessing_secret_parame.md  resume_work_after_cursor_issues.md
notebooks/: agent-test.ipynb
prompts/: app_script_agent_access.md  e2e_test_framework_v1.md  move_packages_to_app_v0.md
prompts/frontend/: agent_chat_layout.ts  chatui_prompt_v0.md  ui_layout.md
reference-files/: debug_endpoint.py  knowledge_graph.py  knowledge_graph_ingestor.py  vector_search_ingestor.py  vector_store.py
tests/: E2E_TESTS_FULL_LIST.md  database_isolation_test.py  knowledge_graph_isolation_test.py  vector_store_isolation_test.py
tests/config/: test_drive_file_config.yaml  test_drive_folder_config.yaml  test_github_repo_config.yaml  test_web_source_config.yaml
tests/e2e/: E2E_TESTS_FULL_LIST.md  E2E_TEST_COMMANDS.md  E2E_TEST_RUNNER_COMMANDS.md  README.md  __init__.py  conftest.py  e2e_test.py  fixtures.py  pytest.ini  test_components.py  test_context_manager.py  test_runner.py  (+4 more)
utils/: secret_manager.py
(+65 files in other folders)
