[project]
name = "team-assistant"
version = "0.1.0"
description = "Team Assistant Agent"
authors = [
    {name = "Your Name", email = "albertomedina@google.com"},
]
dependencies = [
    "google-adk~=1.1.0",
    "opentelemetry-exporter-gcp-trace~=1.9.0",
    "google-cloud-logging~=3.11.4",
    "google-cloud-aiplatform[evaluation,agent-engines]~=1.95.1",
    # Data Processing System Dependencies
    # Core async and web framework dependencies
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    # Google Cloud dependencies (many are included in google-cloud-aiplatform)
    "google-cloud-secret-manager>=2.0.0",
    "google-cloud-storage>=2.0.0",
    # Database dependencies
    "asyncpg>=0.28.0",
    "cloud-sql-python-connector[asyncpg]>=1.4.0",
    "neo4j>=5.0.0",
    # Text processing and NLP
    "spacy>=3.4.0",
    "nltk>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    # Configuration and utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "en-core-web-sm",
    "deprecated>=1.2.18",
]

requires-python = ">=3.10,<3.13"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.8",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]

jupyter = [
    "jupyter~=1.0.0",
]
lint = [
    "ruff>=0.4.6",
    "mypy~=1.15.0",
    "codespell~=2.2.0",
    "types-pyyaml~=6.0.12.20240917",
    "types-requests~=2.32.0.20240914",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"

skip = "./locust_env/*,uv.lock,.venv,**/*.ipynb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
asyncio_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["app","frontend","data_ingestion","config","utils"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
